2009-09-02  Sebastien Pouliot  <sebastien@ximian.com>

	* assembly.c (parse_public_key): Avoid allocating (and not 
	freeing) the public key array when it's not requested by the 
	caller.
	* threads.c (mono_thread_manage, mono_thread_create_internal, 
	ves_icall_System_Threading_Thread_Thread_internal): Free 
	allocated memory on error.

2009-09-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* marshal.c (mono_array_to_lparray): Do DISABLE_COM properly.
	Remove cruft of the previous patch.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c (verify_method_table): Check for abstract + final.
	Fixes #534175.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (verify_class_fields): Check for duplicate fields.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Verify the typeref table for duplicates.

2009-09-01  Rodrigo Kumpera  <rkumpera@novell.com>

	This reverts r140936 and properly handles interfaces with static methods. The
	right fix is to ensure vtables without bubles which is an easier to verify
	constraint. We should avoid such special cases as of the reverted patch as those
	only make the runtime more brittle.

	* class.c (mono_class_setup_vtable_general): Revert previous change that handle
	static methods on interfaces.

	* class.c (setup_interface_offsets): Use the number of virtual methods when
	calculating interface offsets instead of the number of methods. This way we
	avoid bubles on the layout.

2009-08-31  Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c (verify_metadata_header): Some very smart
	obfuscators like to add extra stream headers. Ignore them.

2009-08-30  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_setup_vtable_general): Verify interfaces with static
	methods correctly.

2009-08-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Verify for duplicated types.

2009-08-28  Rodrigo Kumpera  <rkumpera@novell.com>
